# git-topology

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: publish.yml
src/: cluster.rs  clustering.rs  index.rs  lib.rs
src/chunking/: languages.rs  mod.rs  parser.rs
src/embeddings/: config.rs  gemma.rs  mod.rs  openai.rs
