[package]
name = "git-topology"
version = "0.1.0"
edition = "2021"
authors = ["CHERRAD Charef <ccherrad@gmail.com>"]
description = "Shared clustering and topology primitives for git-cognitive and git-semantic"
repository = "https://github.com/ccherrad/git-topology"
license = "MIT OR Apache-2.0"
keywords = ["git", "clustering", "embeddings", "leiden", "code-analysis"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
walkdir = "2.5"
leiden-rs = "0.7.1"
fastembed = { version = "5", default-features = false, features = ["online", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }

tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
